--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -32,7 +32,7 @@ on:
           - tanix-tx6_tb-ls3399_tn3399_tpm312_tqc-a01_tvi3315a_vplus_xiaobao_yskj_zcube1-max_zk-r39a_zysj
           - vplus_tanix-tx6_tqc-a01
           - a311d
-          - beikeyun
+          - beikeyun_fmx1-pro_s905d
           - chainedbox
           - crrc
           - dg3399
